--- a/css/style.css
+++ b/css/style.css
@@ -1,140 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-:root{
-    --black:#000;
-    --white:#fff;
-    --gray:#8a8989;
-    --primary:#8BFBFF;
-    --secondary:#FB38C8;
-    --third:#FF602A;
+*, ::before, ::after{ margin: 0; box-sizing: border-box;}
+a{text-decoration: none;}
+button{ cursor: pointer; padding: 0;}
+:disabled{ cursor: not-allowed;}
+img{ vertical-align: bottom;}
+label{ display: block;}
+ul{ list-style: none; padding: 0;}
+li{list-style: none;}
 
-    
-}
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    transition: all .3s;
+
+html{
+    font-size: 15px;
+    --ff:'Poppins', sans-serif;
+    scroll-behavior: smooth;
+    scroll-padding-top: 80px;
 }
 body{
-    background-color: var(--black);
-    font-family: 'Poppins', sans-serif;
-    /* overflow-x: hidden; */
+    font-size: 16px;
+    font-family: var(--ff);
+    background-color: black;
 }
-body.dark{
-    transition: all 0.3s ease;
-    --black:#fff;
-    --white:#000;
-    --gray:#333;
-    --secondary:#8BFBFF;
-    --primary:#FB38C8;
-    --third:#FF602A;
-}
-/* body.overflow{
-    /* overflow: hidden;
-} */
 
-a{
-    text-decoration: none;
+.container{
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 1rem;
 }
-li{
-    list-style: none;
-}
-.pre-loader{
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--gray);
-}
-.pre-loader i{
-    color: var(--primary);
-    font-size: 50px;
-    animation: rotate  2s linear infinite;
-}
-.day{
-    position: fixed;
-    top: 200px;
-    right: 10px;
-    z-index: 10;
-    border: none;
-    background-color: transparent;
-    animation: rotate 2s linear infinite;
-}
-.day i{
-    font-size: 30px;
-    color: var(--white);
-}
-.night{
-    display: none;
-    position: fixed;
-    top: 200px;
-    right: 10px;
-    z-index: 10;
-    border: none;
-    background-color: transparent;
-    animation: rotate 2s linear infinite;
-}
-.night i{
-    font-size: 30px;
-    color: var(--white);
-}
-header{
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    background-color: var(--black);
-}
-.navbar{
-    padding: 40px 100px;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-.logo{
-    color: var(--white);
-    user-select: none;
-}
-.navbar ul {
-    margin-left: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    transition: all .3s;
-}
-.navbar ul li a{
-    color: var(--white);
-    margin: 0 20px;
-}
-.navbar ul li:hover a:not(.active){
-    color: var(--primary);
-}
-.navbar ul li a.active{
-    padding-bottom: 8px;
-    border-bottom: 2px solid var(--primary);
-}
-.ham-btn{
-    color: var(--white);
-    font-size: 25px;
-    display: none;
-}.ham-btn:hover{
-    color: var(--primary);
-    transform: scale(1.1);
-}
-.row{
-    display: none;
-    width: auto;
-    margin-left: 150px;
-    margin-top: 60px;
-    justify-content: center;
-}
+.thin{ font-weight: 300;}
+
+
+.row{ display: flex; flex-flow: row wrap; margin: 0 -1rem;}
+[class^="col-"]{ flex: 1 0 auto; padding: 0 1rem; }
+.col-1{ flex-basis: 8.33%; max-width: 8.33%; }
+.col-2{ flex-basis: 16.66%; max-width: 16.66%; }
+.col-3{ flex-basis: 25%; max-width: 25%; }
+.col-4{ flex-basis: 33.33%; max-width: 33.33%; }
+.col-5{ flex-basis: 41.66%; max-width: 41.66%; }
+.col-6{ flex-basis: 50%; max-width: 50%; }
+.col-7{ flex-basis: 58.33%; max-width: 58.33%; }
+.col-8{ flex-basis: 66.66%; max-width: 66.66%; }
+.col-9{ flex-basis: 75%; max-width: 75%; }
+.col-10{ flex-basis: 83.33%; max-width: 83.33%; }
+.col-10{ flex-basis: 83.33%; max-width: 83.33%; }
+.col-12{ flex-basis: 100%; max-width: 100%; }
+.flex{ display: flex;}
+.justify-space-bet{ justify-content: space-between; }
+.align-center{ align-items: center;}
+.text-center{text-align: center;}
+.gap-y-50{gap: 4rem 0;}
+
+
+/* custom css */
+
+header{color: #fff; line-height: 100px;}
+header .logo a{color: #fff; font-size: 23px;}
+header .ham-burger{display: none;}
+ul li{padding: 0 10px; margin: 0 5px;}
+ul li a{color: #fff; transition: all .3s;}
+ul li a:hover{padding-bottom: 8px;border-bottom: 2px solid #8BFBFF;}
+
 .heading{
     margin-top: 30px;
     flex-basis: 50%;
 }
 .heading small{
-    color: var(--gray);
+    color: #8a8989;
     font-size: 40px;
     text-transform: uppercase;
     font-weight: 900;
@@ -144,14 +74,14 @@ header{
     font-size: 50px;
     letter-spacing: -4px;
     text-transform: uppercase;
-    color: var(--white);
+    color: #fff;
     margin-bottom: 20px;
 }
 .heading h1 span{
-    color: var(--primary);
+    color: #8BFBFF;
 }
-.heading h4{
-    color: var(--white);
+.heading h3{
+    color: #fff;
     font-size: 20px;
     text-transform: uppercase;
     font-weight: 500;
@@ -161,7 +91,7 @@ header{
 .heading p{
     width: 80%;
     margin-bottom: 30px;
-    color: var(--white);
+    color: #fff;
 }
 .btn{
     width: 165px;
@@ -175,7 +105,7 @@ header{
     cursor: pointer;
     color: var(--black);
     transition: all 0.3s;
-    background-color: var(--white);
+    background-color: #fff;
 }
 .btn:before{
     content: '';
@@ -185,7 +115,7 @@ header{
     top: 0;
     left: 0;
     transform: translateX(-100px) rotate(45deg);
-    background-color: var(--secondary);
+    background-color:#FB38C8;
     transition: transform 0.3s;
 }
 .btn:after{
@@ -196,13 +126,13 @@ header{
     top: 0;
     left: 0;
     transform: translateX(-110px) rotate(45deg);
-    background-color: var(--primary);
+    background-color: #8BFBFF;
     transition: transform 0.3s;
 }
 .btn:hover{
-    border: 1px solid var(--white);
-    color: var(--white);
-    background-color: var(--black);
+    border: 1px solid #fff;
+    color: #fff;
+    background-color: #000;
 }
 .btn:hover::before{
     transform: translateX(100px) rotate(45deg);
@@ -210,87 +140,51 @@ header{
 .btn:hover::after{
     transform: translateX(110px) rotate(45deg);
 }
-.header-img{
-    flex-basis: 50%;
-}
-.header-img img{
+.banner{padding-bottom: 100px;}
+.banner img{
     width: 370px;
+    height: 370px;
     transform: translateY(50px);
     border-radius: 50%;
-    padding: 10px 0;
 }
-
-.effects span{
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 220px;
-    left: -20px;
-    border-radius: 50%;
-    background-color: var(--primary);
-}
-.section{
-    display: flex;
-    width: auto;
-    flex-direction: column;
-    margin: 0px 100px;
-    align-items: center;
-    justify-content: center;
-}
-.skills{
-    display: none;
-}
-.section .section-title{
+/* ---------------------------------------------skills------------------------------------------------------------ */
+.slills .row{display: grid; place-items: center;}
+ h2{
     text-transform: uppercase;
     font-size: 50px;
-    color: var(--white);
+    color: #fff;
+    padding-top: 20px;
 }
-.section .section-desc{
-    text-align: center;
-    color: var(--white);
+ .section-desc{
+    color: #fff;
+    font-size: 17px;
 }
-.section a{
-    color: var(--primary);
-}
-.skill-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
-    color: var(--white);
-    text-align: center;
-    margin-top: 50px;
-    grid-auto-rows: minmax(100px, auto);
-}
-.skill h1{
+
+ .col-12{text-align: center; padding-bottom: 50px;}
+.skill h2{
     margin-bottom: 15px;
     text-transform: uppercase;
-    color: var(--white);
+    color: #fff;
 }
-.skill h3{
-    color: var(--primary);
+.skill h4{
+    color: #8BFBFF;
     margin-bottom: 5px;
     font-weight: 400;
 }
 .skill p{
     margin-bottom: 10px;
     font-weight: 300;
-    color: var(--white);
+    color: #fff;
 }
 .skill i{
     margin-bottom: 10px;
     font-size: 30px;
-    color: var(--primary);
+    color: #8BFBFF;
 }
-.portfolio-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
-    color: var(--white);
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 30px;
-    grid-auto-rows: minmax(100px, auto);
-}
+.skills .skill{text-align: center;}
+
+/* -----------------------------------------------Portfolio start------------------------------------------------------*/
+.portfolio .row{gap: 20px 0;}
 .portfolio .img{
     display: flex;
     flex-direction: column;
@@ -301,7 +195,6 @@ header{
     border: 1px solid var(--white);
     border-radius: 10px;
     position: relative;
-    /* background-image: url(../img/web1.png); */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -372,111 +265,99 @@ header{
 .portfolio .img:hover button{
     opacity: 1;
 }
-.portfolios{
-    display: none;
-}
+ .contact a{color: #8BFBFF;}
+ .portfolio a{color: #8BFBFF;}
+/* ------------------------------------------------services-------------------------------------------------------- */
+.services .service{display: grid; text-align: center;}
+.service h2,h3{
 
-.services-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
-    color: var(--white);
-    text-align: center;
-    margin-top: 50px;
-    grid-auto-rows: minmax(100px, auto);
-}
-.service h1{
-
-    margin-bottom: 15px;
+    padding-bottom: 15px;
     text-transform: uppercase;
-    color: var(--white);
+    color: #fff;
 }
-
 .service p{
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     font-weight: 300;
-    color: var(--white);
+    color: #fff;
 }
 .service i{
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     font-size: 30px;
-    color: var(--primary);
+    color: #8BFBFF;
 }
-.services{
-    display: none;
-}
-.contact-container{
-    text-align: center;
-}
+
+/* ----------------------------------------------contact------------------------------------------------------------- */
+
 .contact-form{
     margin-top:50px;
+    display: grid;
+    place-items: center;
+    padding: 0 10px;
 }
 .contact-form input{
     margin-bottom: 10px;
     height: 30px;
     padding: 10px;
     outline: none;
-    color: var(--white);
+    color: #fff;
     background-color: transparent;
-    border: 1px solid var(--white);
+    border: 1px solid #fff;
     border-radius: 30px;
     display: block;
     width: 400px;
 }
 .contact-form textarea{
-    color: var(--white);
+    color: #fff;
     margin-bottom: 30px;
     height: 200px;
     padding: 20px;
     outline: none;
     background-color: transparent;
-    border: 1px solid var(--white);
+    border: 1px solid #fff;
     border-radius: 10px;
     display: block;
     width: 400px;
     width: 400px;
     resize: none;
 }
-.contact{
-    display: none;
-}
 
 
-.sec-dis{
-    display: flex;
+@media screen and (max-width:1220px){
 }
-@keyframes rotate {
-    from{
-        transform: rotate(0deg);
-    }
-    to{
-        transform: rotate(360deg);
-    }
+@media screen and (max-width:980px){
+    .col-t-6{ flex-basis: 50%; max-width: 50%; }
+    .heading h2{line-height: 45px;}
 }
-@media screen and (max-width:905px) {
-    header{
-        height: 120vh;
-    }
-    .navbar {
-        padding: 20px 40px;
-    }
-    .navbar ul{
+@media screen and (max-width:769px){
+.col-m-6{flex-basis: 50%; max-width: 50%;}
+.col-m-12{flex-basis: 100%; max-width: 100%;}
+.banner img{width: 100%; height: auto;}
+.skills .skill{padding: 10px 50px;}
+}
+
+@media screen and (max-width:480px){
+    .col-p-12{ flex-basis: 100%; max-width: 100%; }
+    .skills .skill{padding: 10px 40px;}
+    nav{display: none;}
+    header .ham-burger{display: block; color: #8BFBFF; font-size: 20px; padding-right: 20px;}
+    .contact-form input {width: 350px;}
+    .contact-form textarea {width: 350px;}
+    nav{
         position: absolute;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        flex-direction: column;
-        top: 0;
-        left: 0;
+        /* justify-content: center; */
+        /* align-items: center; */
+        /* align-content: center; */
+        /* flex-direction: column; */
+        top: 50px;
+        left: 315px;
         display: none;
-        visibility: hidden;
-        opacity: 0;
-        transform: translateX(-50px) translateY(-50px);
-        width: 100vw;
-        height: 110vh;
+        /* transform: translateX(-50px) translateY(-50px); */
+        line-height: 30px;
         z-index: 100;
-        background-color: var(--black);
+        height: 20vh;
+        background-color: transparent;
     }
+    .nav ul{display: block;}
     .navbar .dis{
         display: flex;
         opacity: 1;
@@ -499,79 +380,4 @@ header{
         font-family: 'popins' ,sans-serif;
         transform: translateY(230px) translateX(-50px) rotate(90deg);
     }
-    .ham-btn {
-        display: block;
-        opacity: 1;
-        z-index: 100;
-    }
-    
-    .row{
-        flex-direction: column-reverse;
-        text-align: center;
-        height: 100vh;
-        margin: 0 40px;
-    }
-    .heading h1{
-        line-height: 40px;
-    }
-    .heading p{
-        width: 100%;
-
-    }
-    .heading{
-        margin: 0;
-        margin-top: 50px;
-        flex-basis: 100%;
-    }
-   
-    .header-img img{
-        width: 200px;
-    }
-    .effects span:nth-child(2){
-        display: none;
-    }
-    .section-desc{
-        width: 300px;
-    }
-    .skill-container{
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    }
-    .skill-container p{
-        width: 300px;
-    }
-    .portfolio-container{
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    }
-    .portfolio{
-        width: 300px;
-        margin-bottom: 10px;
-    }
-    .services-container{
-        grid-template-columns: repeat(1, 1fr);
-        grid-auto-rows: minmax(100px, auto);
-        }
-        .services p{
-            width: 300px;
-        }
-        .section .section-title{
-            font-size: 40px;
-        }
-}
-@media screen and (max-width:905px) {
-    .contact-form input{
-        width: 300px;
-    }
-    .contact-form textarea{
-        width: 300px;
-    }
-
-}
-@media screen and (max-width:820px ){
-    .header-img img{width: 400px; height: 400px;}
-}
-@media screen and (max-width:480px ){
-    .header-img img{width: 250px; height: 250px;}
-    .sec-dis .heading span{display: block; padding-top: 25px;}
 }
